[gd_scene load_steps=24 format=3 uid="uid://isj1s76o4ek4"]

[ext_resource type="Script" path="res://interface_jogo/interface_glossario/interface_glossario.gd" id="1_ejanw"]
[ext_resource type="Texture2D" uid="uid://dics3kl13aipr" path="res://assets/imagens/Sprout Lands - UI/Sprite sheets/Sprite sheet for Basic Pack.png" id="1_vh8qg"]
[ext_resource type="PackedScene" uid="uid://dw887bsydvhg7" path="res://interface_jogo/interface_glossario/textura_animada_interface/animated_texture_rect.tscn" id="2_v50ty"]
[ext_resource type="FontFile" uid="uid://8dyl8sjpwyl2" path="res://assets/fontes/ExpressionPro.ttf" id="3_wuabr"]
[ext_resource type="Texture2D" uid="uid://74ryrqqrb7wo" path="res://assets/imagens/PixelBooksVers1.0/RADL_Book_red.png" id="4_r40hi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pvl2h"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 4.0
texture_margin_top = 6.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(869, 100, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ll50"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 4.0
texture_margin_top = 6.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(869, 100, 22, 24)
modulate_color = Color(0.768627, 0.603922, 0.423529, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xovre"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 6.0
region_rect = Rect2(837, 100, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_llhv3"]
atlas = ExtResource("4_r40hi")
region = Rect2(570, 0, 190, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4swe"]
atlas = ExtResource("4_r40hi")
region = Rect2(0, 0, 190, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3fie"]
atlas = ExtResource("4_r40hi")
region = Rect2(190, 0, 190, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua1j7"]
atlas = ExtResource("4_r40hi")
region = Rect2(380, 0, 190, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfp8v"]
atlas = ExtResource("4_r40hi")
region = Rect2(760, 0, 190, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtm1h"]
atlas = ExtResource("4_r40hi")
region = Rect2(950, 0, 190, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfl66"]
atlas = ExtResource("4_r40hi")
region = Rect2(1140, 0, 190, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_sitbx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llhv3")
}],
"loop": false,
"name": &"aberto",
"speed": 60.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_g4swe")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_a3fie")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_a3fie")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_ua1j7")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_ua1j7")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_llhv3")
}],
"loop": false,
"name": &"abrir",
"speed": 60.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_llhv3")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_ua1j7")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_ua1j7")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_a3fie")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_a3fie")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_g4swe")
}],
"loop": false,
"name": &"fechar",
"speed": 60.0
}, {
"frames": [{
"duration": 0.01,
"texture": SubResource("AtlasTexture_llhv3")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_yfp8v")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_gtm1h")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_bfl66")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_llhv3")
}],
"loop": false,
"name": &"passar_pagina",
"speed": 60.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rkbs0"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
region_rect = Rect2(269, 14, 21, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_phl1d"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
region_rect = Rect2(270, 14, 19, 20)
modulate_color = Color(0.768627, 0.603922, 0.423529, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsaan"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
region_rect = Rect2(269, 14, 21, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbcgi"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a8gda"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
region_rect = Rect2(270, -2, 21, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2nuci"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
region_rect = Rect2(271, -2, 19, 20)
modulate_color = Color(0.768627, 0.603922, 0.423529, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2js8s"]
texture = ExtResource("1_vh8qg")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
region_rect = Rect2(270, -2, 21, 20)

[node name="InterfaceGlossario" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejanw")

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.184314, 0.168627, 0.784314)

[node name="SecaoMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 1.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="Fundo" type="NinePatchRect" parent="SecaoMenu"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 2
texture = ExtResource("1_vh8qg")
region_rect = Rect2(153, 9, 30, 30)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="SecaoMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SecaoMenu/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SecaoMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="CampoPesquisa" type="LineEdit" parent="SecaoMenu/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wuabr")
theme_override_font_sizes/font_size = 16
placeholder_text = "Pesquise um termo"

[node name="MarginContainer2" type="MarginContainer" parent="SecaoMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="SecaoMenu/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ListaTermos" type="VBoxContainer" parent="SecaoMenu/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="SecaoLivro" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SecaoLivro"]
layout_mode = 2

[node name="Titulo" type="HBoxContainer" parent="SecaoLivro/VBoxContainer"]
layout_mode = 2

[node name="Fundo" type="NinePatchRect" parent="SecaoLivro/VBoxContainer/Titulo"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_vh8qg")
region_rect = Rect2(153, 9, 30, 30)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="SecaoLivro/VBoxContainer/Titulo/Fundo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -9.0
offset_right = 147.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SecaoLivro/VBoxContainer/Titulo/Fundo/MarginContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wuabr")
theme_override_font_sizes/font_size = 20
text = "Glossario de Comandos Apreendidos"

[node name="BotaoFechar" type="Button" parent="SecaoLivro/VBoxContainer/Titulo"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_pvl2h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2ll50")
theme_override_styles/normal = SubResource("StyleBoxTexture_xovre")

[node name="Livro" type="MarginContainer" parent="SecaoLivro/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LivroAnimado" parent="SecaoLivro/VBoxContainer/Livro" instance=ExtResource("2_v50ty")]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_llhv3")
sprite_frames = SubResource("SpriteFrames_sitbx")
animacao_inicial = "abrir"

[node name="HBoxContainer" type="HBoxContainer" parent="SecaoLivro/VBoxContainer/Livro"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer"]
layout_mode = 2

[node name="BotaoVoltarPagina2" type="Button" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_rkbs0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_phl1d")
theme_override_styles/normal = SubResource("StyleBoxTexture_wsaan")

[node name="MarginContainer2" type="MarginContainer" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 60

[node name="HBoxContainer" type="HBoxContainer" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 44

[node name="PanelContainer" type="PanelContainer" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jbcgi")

[node name="DescricaoComando" type="RichTextLabel" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer2/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.141176, 0.0823529, 0.152941, 1)
theme_override_fonts/normal_font = ExtResource("3_wuabr")
theme_override_font_sizes/normal_font_size = 10
text = "Print():

Exemplo de descrição do comando print()"

[node name="PanelContainer2" type="PanelContainer" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jbcgi")

[node name="ExemploComando" type="RichTextLabel" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer2/HBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.141176, 0.0823529, 0.152941, 1)
theme_override_fonts/normal_font = ExtResource("3_wuabr")
theme_override_font_sizes/normal_font_size = 10
text = "Exemplo:

print(\"ola mundo\")"

[node name="MarginContainer3" type="MarginContainer" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer"]
layout_mode = 2

[node name="BotaoPassarPagina" type="Button" parent="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_a8gda")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2nuci")
theme_override_styles/normal = SubResource("StyleBoxTexture_2js8s")

[connection signal="text_changed" from="SecaoMenu/MarginContainer/VBoxContainer/MarginContainer/CampoPesquisa" to="." method="_ao_mudar_texto_campo_pesquisa"]
[connection signal="pressed" from="SecaoLivro/VBoxContainer/Titulo/BotaoFechar" to="." method="_ao_fechar_glossario"]
[connection signal="pressed" from="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer/BotaoVoltarPagina2" to="." method="_ao_clicar_voltar_pagina"]
[connection signal="pressed" from="SecaoLivro/VBoxContainer/Livro/HBoxContainer/MarginContainer3/BotaoPassarPagina" to="." method="_ao_clicar_passar_pagina"]

[editable path="SecaoLivro/VBoxContainer/Livro/LivroAnimado"]
